--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "evernode",
   "description": "Evernote node.js API - make calls to the Evernote API from node.js",
-  "homepage": "http://evernote.com/",
+  "homepage": "https://cloudsnap.github.com/evernode",
   "repository":
     { "type" : "git",
-      "url" : "https://github.com/flyingninjasquirrel/evernode"
+      "url" : "https://github.com/cloudsnap/evernode"
     },
-  "version": "0.0.1",
+  "version": "0.0.2-dev",
   "directories" : { "lib" : ["./lib/evernote-thrift","./lib/evernode"] },
   "main": "./lib/evernode",
   "engines": { "node": ">= 0.4.0" },
   "dependencies": {
-    "thrift-dev": "0.8.0-dev02"
+    "thrift": "0.7.0"
   }
 }
