Edit package.json for oauth dependency

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "./lib/evernode",
   "engines": { "node": ">= 0.4.0" },
   "dependencies": {
-    "thrift-dev": "0.8.0-dev02"
+    "thrift-dev": "0.8.0-dev02",
+    "oauth": "latest"
   }
 }
